# pokemon_damage_calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: PokedexEntry.h  damage_calculation.h  enums.h  move.h  pokemon.h  typechart.h
src/: PokedexEntry.cpp  damage_calculation.cpp  enums.h  main.cpp  move.cpp  pokedexentry.h  pokemon.cpp  pokemon.h  typechart.cpp
tests/: test_damage.cpp  test_main.cpp  test_pokemon.cpp
